<resources>
    <string name="app_name">FlatDecorationShop</string>
    <string name="username">Teljes név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registartion">Regisztráció</string>
    <string name="mainTitle">Lakás Dekoráció Webshop</string>
    <string name="email">E-mail cím</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="cancel">Mégse</string>
    <string name="phone">Telefonszám</string>
    <string name="exit">Kilépés</string>
    <string name="company">Cég</string>
    <string name="privatePerson">Magánszemély</string>
    <string name="cart">Kosárba</string>
    <string name="product_information">Termékinformáció</string>
    <string name="description">Leírás</string>

    <!-- RecyclerView -->
    <string name="title_placeholder">Név</string>
    <string name="itme_placeholder">Leírás</string>
    <string name="item_information_placeholder">Infó a termékről</string>
    <string name="delete">Törlés</string>
    <string name="updateCart">Módosítás</string>
    <string name="upload">Feltöltés</string>
    <string name="take_picture">Fotókészítés</string>

    <string-array name="shopping_item_names">
        <item>Képkeret</item>
        <item>Ébresztőóra</item>
        <item>Műnövény </item>
        <item>Váza</item>
        <item>Falióra</item>
        <item>Tükör</item>
    </string-array>

    <string-array name="shopping_item_description">
        <item>Ez egy képkeret!</item>
        <item>Ez egy ébresztőóra!</item>
        <item>Ez egy műnövény!</item>
        <item>Ez egy váza!</item>
        <item>Ez egy falióra!</item>
        <item>Ez egy tükör!</item>
    </string-array>

    <string-array name="shopping_item_rates">
        <item>4</item>
        <item>3</item>
        <item>5</item>
        <item>3.5</item>
        <item>3</item>
        <item>5</item>
    </string-array>

    <string-array name="shopping_item_images">
        <item>@drawable/picture_frame</item>
        <item>@drawable/alarmclock</item>
        <item>@drawable/plastic_plant</item>
        <item>@drawable/vase</item>
        <item>@drawable/wall_clock</item>
        <item>@drawable/mirror</item>
    </string-array>

    <string-array name="shopping_item_prices">
        <item>1990 Ft</item>
        <item>11000 Ft</item>
        <item>5850 Ft</item>
        <item>1100 Ft</item>
        <item>1450 Ft</item>
        <item>2850 Ft</item>
    </string-array>
</resources>