<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/registration"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/textView_Registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="60dp"
        android:text="@string/registartion"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_Username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:textColor="@color/black"
        android:background="@color/white"
        android:ems="12"
        android:paddingStart="@dimen/default_margin"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView_Registration"/>

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:textColor="@color/black"
        android:background="@color/white"
        android:ems="12"
        android:paddingStart="@dimen/default_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_Username"/>

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:textColor="@color/black"
        android:background="@color/white"
        android:ems="12"
        android:paddingStart="@dimen/default_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_Email"/>

    <EditText
        android:id="@+id/editText_PasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:textColor="@color/black"
        android:background="@color/white"
        android:ems="12"
        android:paddingStart="@dimen/default_margin"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_Password"/>

    <EditText
        android:id="@+id/editText_Phone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:textColor="@color/black"
        android:background="@color/white"
        android:ems="12"
        android:paddingStart="@dimen/default_margin"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_PasswordAgain"/>

    <RadioGroup
        android:id="@+id/customerTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@id/editText_Phone">

        <RadioButton
            android:id="@+id/radioButton_PivatePerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:paddingStart="5dp"
            android:text="@string/privatePerson"
            android:layout_marginBottom="5dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:paddingStart="5dp"
            android:text="@string/company"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/customerTypeGroup"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#6B460C"
            android:textColor="@color/white"            android:text="@string/registartion"
            android:onClick="registration"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="#6B460C"
            android:textColor="@color/white"            android:text="@string/cancel"
            android:onClick="cancel"/>

    </LinearLayout>

</RelativeLayout>