<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/textView_MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/mainTitle"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        app:layout_constraintHorizontal_bias="0.5"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:background="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#3E3A3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:background="@color/white"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#3E3A3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:background="#6B460C"
        android:textColor="@color/white"
        android:onClick="login"
        android:text="@string/login"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/button_Registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:background="#6B460C"
        android:textColor="@color/white"
        android:onClick="registration"
        android:text="@string/registartion"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Login"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/button_Exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="#D57B79"
        android:onClick="exit"
        android:text="....."
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Registration"
        app:layout_constraintVertical_bias="0.582" />

</androidx.constraintlayout.widget.ConstraintLayout>