<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:id="@+id/productBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/number"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text=""
                android:layout_centerHorizontal="true"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/db"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="db"
                android:layout_centerHorizontal="true"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/itemTitle"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/description"
                android:layout_centerHorizontal="true"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price"
                style=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/productBox"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:textColor="#6B460C"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/updateBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productBox"
            android:layout_centerHorizontal="true">

            <Spinner
                android:id="@+id/productNumberSpinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/productBox"/>

            <Button
                android:id="@+id/updateCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/updateCart" />

            <Button
                android:id="@+id/deleteCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D57B79"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/delete"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>